css/style.css
/* HTML5 ✰ Boilerplate
 * ==|== normalize ==========================================================
 */

article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
audio:not([controls]) { display: none; }
[hidden] { display: none; }

html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }

body { margin: 0; font-size: 13px; line-height: 1.231; }
body, button, input, select, textarea { font-family: 'Lato',Helvetica,Arial,sans-serif; color: #111; }

::-moz-selection { background: #fe57a1; color: #fff; text-shadow: none; }
::selection { background: #fe57a1; color: #fff; text-shadow: none; }

a { color: #939ca5; text-decoration: none; }
a:visited { color: #939ca5; }
a:hover { color: #50555a; }
a:focus { outline: thin dotted; }
a:hover, a:active { outline: 0; }

abbr[title] { border-bottom: 1px dotted; }
b, strong { font-weight: bold; }
blockquote { margin: 1em 40px; }
dfn { font-style: italic; }
hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
ins { background: #ff9; color: #000; text-decoration: none; }
mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
pre, code, kbd, samp { font-family: monospace, monospace; _font-family: 'courier new', monospace; font-size: 1em; }
pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
q { quotes: none; }
q:before, q:after { content: ""; content: none; }
small { font-size: 85%; }
sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
sup { top: -0.5em; }
sub { bottom: -0.25em; }
ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
dd { margin: 0 0 0 40px; }
nav ul, nav ol { list-style: none; list-style-image: none; margin: 0; padding: 0; }
img { border: 0; -ms-interpolation-mode: bicubic; vertical-align: middle; }
svg:not(:root) { overflow: hidden; }
figure { margin: 0; }

form { margin: 0; }
fieldset { border: 0; margin: 0; padding: 0; }
label { cursor: pointer; }
legend { border: 0; *margin-left: -7px; padding: 0; }
button, input, select, textarea { font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; }
button, input { line-height: normal; *overflow: visible; }
table button, table input { *overflow: auto; }
button, input[type="button"], input[type="reset"], input[type="submit"] { cursor: pointer; -webkit-appearance: button; }
input[type="checkbox"], input[type="radio"] { box-sizing: border-box; }
input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; }
input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }
button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
textarea { overflow: auto; vertical-align: top; resize: vertical; }
input:valid, textarea:valid {  }
input:invalid, textarea:invalid { background-color: #f0dddd; }

table { border-collapse: collapse; border-spacing: 0; }
td { vertical-align: top; }


/* ==|== primary styles =====================================================
   Author: olizilla <oli@zilla.org.uk>
   ========================================================================== */

html {
	background: #f0f0f0;
}
header {
	background: #fafafa;
	border-bottom: solid 1px #bebebe;
	padding: 20px 0 20px;
}
header .name {
    /*width:60%;*/
    /*display: inline-block;*/
    /*margin-right:2%;*/
    /*min-width: 300px;*/
    margin-bottom: 15px;
}
header .contact{
	/*width:35%;*/
	/*margin-left: 40px;*/
	/*text-align: right;*/
	/*display: inline-block;*/
	vertical-align: text-bottom;
    /*float:right;*/
    /*min-width: 225px;*/
    line-height: 1.4em;
    margin:0 0 6px 0;
}
header .contact .email {
	color: #7d858f;
}
header .contact .telephone {
	letter-spacing: 1px;
}
header .contact .links {
	margin-bottom:2px;
}
header .contact .links a:before {
	content:"| ";
	color: #e1e1e1;
	margin: 0 5px;
}
header .contact .links a:first-child:before {
	content:"";
    margin: 0;
}
header h1{
	font-family:"Lato","HelveticaNeue-UltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	font-weight:100;
	font-size:3.6em;
    letter-spacing: -3px;
	margin: 0;
}
header h2{
	font-size: 2.4em;
	text-transform: lowercase;
	margin: -4px 0 6px 0;
}
header .box,
#main,
footer {
	max-width: 960px;
	margin:0 auto;
    padding:0 14px 0;
}
#main{
	padding:60px 14px;
}
article{
	margin-bottom:60px;
}
article header {
	border-bottom: solid 2px #fff;
	background: transparent;
	margin: -6px 0 0;
	padding:0;
}
article header h1 {
	font-size: 2.6em;
    letter-spacing: normal;
}
article header p,
footer p{
	color: #7d858f;
	letter-spacing: inherit;
	font-size: 1.1em;
	line-height: 1.4;
}
article img {
    width:100%;
	min-width: 345px;
	border:solid 1px #CACED1;
}
article .box {
    margin-top:20px;
	display: inline-block;
    min-width: 200px;
}
article p {
	letter-spacing: 0.4px;
	line-height: 1.4;
}
.btn {
	background:#ffffff;
	padding: 4px 10px;
	text-align:center;
	font-size: 15px;
	border: solid 1px #d3d3d3;
	border-radius:0.2em;
	-moz-border-radius:0.2em;
	-webkit-border-radius:0.2em;
}
footer .copyright {
    font-size: smaller;
    border-top: solid 2px #fff;
    line-height: 4em;
}
footer .top a{
    display: block;
    width:15px;
    height: 18px;
    background: url(../img/arrow_up.gif) no-repeat;
    float:right;
}
footer .top a:hover {
    background-image: url(../img/arrow_up_hover.gif);
}
/* ==|== non-semantic helper classes ======================================== */
.ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
.ir br { display: none; }
.hidden { display: none !important; visibility: hidden; }
.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
.invisible { visibility: hidden; }
.clearfix:before, .clearfix:after { content: ""; display: table; }
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }

/* ==|== media queries ====================================================== */

@media only screen and (min-width: 480px) {

}

@media only screen and (min-width: 768px) {
    /*header .name,*/
    article img {
        float:left;
        width: 62%;
        margin:0 4% 0 0;
    }
    header .contact,
    article .box {
        width:30%;
    }
}

/* ==|== print styles ======================================================= */
 
@media print {
  * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; } 
  a, a:visited { text-decoration: underline; }
  a[href]:after { content: " (" attr(href) ")"; }
  abbr[title]:after { content: " (" attr(title) ")"; }
  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; } 
  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
  thead { display: table-header-group; }
  tr, img { page-break-inside: avoid; }
  img { max-width: 100% !important; }
  @page { margin: 0.5cm; }
  p, h2, h3 { orphans: 3; widows: 3; }
  h2, h3 { page-break-after: avoid; }
}

